force-app/main/default/objects/Lead__c/fields/CAIRA_Level__c.field-meta.xml
<CustomField>
    <fullName>CAIRA_Level__c</fullName>
    <label>CAIRA Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>