force-app/main/default/objects/Lead__c/fields/CAN_ID__c.field-meta.xml
<CustomField>
    <fullName>CAN_ID__c</fullName>
    <formula>Candidate__r.Candidate_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAN ID</label>
    <type>Text</type>
</CustomField>