force-app/main/default/objects/Lead__c/fields/Candidate1__c.field-meta.xml
<CustomField>
    <fullName>Candidate1__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Student__c)),
    HYPERLINK(
        &apos;/&apos; &amp; Student__c,
        TRIM(
            BLANKVALUE(Candidate__r.FirstName, &apos;&apos;) &amp;
            IF(
                NOT(ISBLANK(Candidate__r.MiddleName)),
                &apos; &apos; &amp; Candidate__r.MiddleName,
                &apos;&apos;
            ) &amp;
            IF(
                NOT(ISBLANK(Candidate__r.LastName)),
                &apos; &apos; &amp; Candidate__r.LastName,
                &apos;&apos;
            )
        ),
        &apos;_blank&apos;
    ),
    IF(
        NOT(ISBLANK(Candidate__c)),
        HYPERLINK(
            &apos;/&apos; &amp; Candidate__c,
            TRIM(
                BLANKVALUE(Candidate__r.FirstName, &apos;&apos;) &amp;
                IF(
                    NOT(ISBLANK(Candidate__r.MiddleName)),
                    &apos; &apos; &amp; Candidate__r.MiddleName,
                    &apos;&apos;
                ) &amp;
                IF(
                    NOT(ISBLANK(Candidate__r.LastName)),
                    &apos; &apos; &amp; Candidate__r.LastName,
                    &apos;&apos;
                )
            ),
            &apos;_blank&apos;
        ),
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate</label>
    <type>Text</type>
</CustomField>