force-app/main/default/objects/Lead__c/fields/CC_Spoc__c.field-meta.xml
<CustomField>
    <fullName>CC_Spoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Spoc</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>