force-app/main/default/objects/Lead__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <label>Channel Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>