force-app/main/default/objects/Lead__c/fields/Click_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Call__c</fullName>
    <formula>HYPERLINK(
  &quot;/lightning/n/Click_to_Call?c__recordId=&quot; &amp; Id,
  &quot;Call&quot;,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Click to Call</label>
    <type>Text</type>
</CustomField>