force-app/main/default/objects/Lead__c/fields/Course_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Course_Bucket__c</fullName>
    <label>Course Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bucket</valueSetName>
    </valueSet>
</CustomField>