force-app/main/default/objects/Lead__c/fields/Disable_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Disable_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Round Robin</label>
    <type>Checkbox</type>
</CustomField>