force-app/main/default/objects/Lead__c/fields/Downgraded__c.field-meta.xml
<CustomField>
    <fullName>Downgraded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downgraded</label>
    <type>Checkbox</type>
</CustomField>