force-app/main/default/objects/Lead__c/fields/Engagement_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Bucket__c</fullName>
    <label>Engagement Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Engagement_Bucket</valueSetName>
    </valueSet>
</CustomField>