force-app/main/default/objects/Lead__c/fields/enrollment_status__c.field-meta.xml
<CustomField>
    <fullName>enrollment_status__c</fullName>
    <label>EF Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EF_Status</valueSetName>
    </valueSet>
</CustomField>