force-app/main/default/objects/Lead__c/fields/Expected_payment_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_payment_date__c</fullName>
    <label>Expected payment date</label>
    <type>Date</type>
</CustomField>