force-app/main/default/objects/Lead__c/fields/GP_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>GP_Lead_Status__c</fullName>
    <label>GP Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New lead</fullName>
            </value>
            <value>
                <fullName>Under Verification</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
            <value>
                <fullName>Crosscheck (USP Process)</fullName>
            </value>
            <value>
                <fullName>Not eligible</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>