force-app/main/default/objects/Lead__c/fields/GP_SPOC__c.field-meta.xml
<CustomField>
    <fullName>GP_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>