force-app/main/default/objects/Lead__c/fields/GP_User__c.field-meta.xml
<CustomField>
    <fullName>GP_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>