force-app/main/default/objects/Lead__c/fields/Interested_Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>Interested_Webinar_Id__c</fullName>
    <label>Interested Webinar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>