force-app/main/default/objects/Lead__c/fields/Is_Created_Manually__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created Manually</label>
    <type>Checkbox</type>
</CustomField>