force-app/main/default/objects/Lead__c/fields/Is_Merged__c.field-meta.xml
<CustomField>
    <fullName>Is_Merged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Merged</label>
    <type>Checkbox</type>
</CustomField>