force-app/main/default/objects/Lead__c/fields/Is_ReEnquiry__c.field-meta.xml
<CustomField>
    <fullName>Is_ReEnquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ReEnquiry</label>
    <type>Checkbox</type>
</CustomField>