force-app/main/default/objects/Lead__c/fields/Lead_Merge_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lead_Merge_Comments__c</fullName>
    <label>Lead Merge Comments</label>
    <type>TextArea</type>
</CustomField>