force-app/main/default/objects/Lead__c/fields/Level_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Level_Sequence__c</fullName>
    <label>Level Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>