force-app/main/default/objects/Lead__c/fields/Masked_Phone__c.field-meta.xml
<CustomField>
    <fullName>Masked_Phone__c</fullName>
    <formula>IF( ISBLANK( Phone__c ) , &quot;&quot;, LEFT(Phone__c, 1) &amp; &quot;XXXXXXXXX&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>