force-app/main/default/objects/Lead__c/fields/Not_Commited__c.field-meta.xml
<CustomField>
    <fullName>Not_Commited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Commited</label>
    <type>Checkbox</type>
</CustomField>