force-app/main/default/objects/Lead__c/fields/Primary_tag__c.field-meta.xml
<CustomField>
    <fullName>Primary_tag__c</fullName>
    <label>Primary tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_tag</valueSetName>
    </valueSet>
</CustomField>