force-app/main/default/objects/Lead__c/fields/Queue_Stage__c.field-meta.xml
<CustomField>
    <fullName>Queue_Stage__c</fullName>
    <label>Queue Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>