force-app/main/default/objects/Lead__c/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <description>This field must be filled when Status is Rejected.</description>
    <label>Reason For Rejection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>