force-app/main/default/objects/Lead__c/fields/Register_For_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Register_For_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Register For Webinar</label>
    <type>Checkbox</type>
</CustomField>