force-app/main/default/objects/Lead__c/fields/Source_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Source_Bucket__c</fullName>
    <label>Source Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Bucket</valueSetName>
    </valueSet>
</CustomField>