force-app/main/default/objects/Lead__c/fields/Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Reason__c</fullName>
    <label>Status Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joining Another University</fullName>
            </value>
            <value>
                <fullName>Course Not Suitable</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Already Has Sufficient Credits</fullName>
            </value>
            <value>
                <fullName>Timing Not Right</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>