force-app/main/default/objects/Lead__c/fields/Tabelau_Test_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Tabelau_Test_Created_Date__c</fullName>
    <label>Tabelau Test Created Date</label>
    <type>Date</type>
</CustomField>