force-app/main/default/objects/Lead__c/fields/Testing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Testing_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Lead</label>
    <type>Checkbox</type>
</CustomField>