force-app/main/default/objects/Lead__c/recordTypes/CAIRA.recordType-meta.xml
<RecordType>
    <fullName>CAIRA</fullName>
    <active>true</active>
    <label>CAIRA</label>
</RecordType>