force-app/main/default/objects/Lead__c/recordTypes/MCOM.recordType-meta.xml
<RecordType>
    <fullName>MCOM</fullName>
    <active>true</active>
    <label>MCOM</label>
</RecordType>