force-app/main/default/objects/Lead__c/recordTypes/US_Pathway.recordType-meta.xml
<RecordType>
    <fullName>US_Pathway</fullName>
    <active>true</active>
    <label>US Pathway</label>
</RecordType>