force-app/main/default/objects/Lead__c/validationRules/Committed_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>Committed_Checkbox</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(Expected_payment_date__c),
    NOT(Not_Commited__c)
)</errorConditionFormula>
    <errorDisplayField>Not_Commited__c</errorDisplayField>
    <errorMessage>checkbox is neccestity</errorMessage>
</ValidationRule>