force-app/main/default/objects/Lead__c/validationRules/Expected_Payment_Date_Cannot_be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Payment_Date_Cannot_be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Expected_payment_date__c)),
    Expected_payment_date__c &lt; TODAY()
)</errorConditionFormula>
    <errorMessage>Expected Payment Date cannot be in the past.</errorMessage>
</ValidationRule>