force-app/main/default/objects/Lead__c/validationRules/levels_to_have_mandotary_payment_date.validationRule-meta.xml
<ValidationRule>
    <fullName>levels_to_have_mandotary_payment_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Stage__c, &quot;M3+&quot;),
        ISPICKVAL(Stage__c, &quot;M3++&quot;),
        ISPICKVAL(Stage__c, &quot;M5&quot;),
        ISPICKVAL(Stage__c, &quot;M6&quot;)
    )
    
)</errorConditionFormula>
    <errorDisplayField>Expected_payment_date__c</errorDisplayField>
    <errorMessage>expected date is neecesary for m3+ , m3++ , m5, m6</errorMessage>
</ValidationRule>