force-app/main/default/objects/Lead__c/validationRules/M1_From.validationRule-meta.xml
<ValidationRule>
    <fullName>M1_From</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;M1&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c), &quot;M1&quot;)),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M2&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3+&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3++&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid transition to M1. M1 can only come from: M2, M3, M3+, M3++.</errorMessage>
</ValidationRule>