force-app/main/default/objects/Lead__c/validationRules/M2_TO.validationRule-meta.xml
<ValidationRule>
    <fullName>M2_TO</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;M2&quot;),
    NOT(ISPICKVAL(Stage__c, &quot;M2&quot;)),
    NOT(
        OR(
            ISPICKVAL(Stage__c,&quot;M1&quot;),
            ISPICKVAL(Stage__c,&quot;M3&quot;),
            ISPICKVAL(Stage__c,&quot;M3+&quot;),
            ISPICKVAL(Stage__c,&quot;M3++&quot;),
            ISPICKVAL(Stage__c,&quot;M5&quot;),
            ISPICKVAL(Stage__c,&quot;M6&quot;),
            ISPICKVAL(Stage__c,&quot;M7&quot;),
            ISPICKVAL(Stage__c,&quot;M4&quot;),
            ISPICKVAL(Stage__c,&quot;M4-&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid next stage from M2. Allowed: M1, M3, M3+, M3++, M5, M6, M7, M4, M4-.</errorMessage>
</ValidationRule>