force-app/main/default/objects/Lead__c/validationRules/M3_FROM.validationRule-meta.xml
<ValidationRule>
    <fullName>M3_FROM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;M3&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c), &quot;M3&quot;)),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M1&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M2&quot;),
            ISBLANK(PRIORVALUE(Stage__c))
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid transition to M3. Allowed previous: M1, M2, Blank.</errorMessage>
</ValidationRule>