force-app/main/default/objects/Lead__c/validationRules/M3_TO.validationRule-meta.xml
<ValidationRule>
    <fullName>M3_TO</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;M3&quot;),
    NOT(ISPICKVAL(Stage__c, &quot;M3&quot;)),
    NOT(
        OR(
            ISPICKVAL(Stage__c,&quot;M1&quot;),
            ISPICKVAL(Stage__c,&quot;M2&quot;),
            ISPICKVAL(Stage__c,&quot;M3+&quot;),
            ISPICKVAL(Stage__c,&quot;M3++&quot;),
            ISPICKVAL(Stage__c,&quot;M7&quot;),
            ISPICKVAL(Stage__c,&quot;M4&quot;),
            ISPICKVAL(Stage__c,&quot;M4-&quot;),
            ISPICKVAL(Stage__c,&quot;M5&quot;),
            ISPICKVAL(Stage__c,&quot;M6&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid next stage from M3. Allowed: M1, M2, M3+, M3++, M7, M4, M4-, M5, M6.</errorMessage>
</ValidationRule>