force-app/main/default/objects/Lead__c/validationRules/M3Plus_FROM.validationRule-meta.xml
<ValidationRule>
    <fullName>M3Plus_FROM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;M3+&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c), &quot;M3+&quot;)),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M1&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M2&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3++&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid transition to M3+. Allowed previous: M1, M2, M3, M3++.</errorMessage>
</ValidationRule>