force-app/main/default/objects/Lead__c/validationRules/M4_FROM.validationRule-meta.xml
<ValidationRule>
    <fullName>M4_FROM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;M4&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c), &quot;M4&quot;)),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M4-&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M5&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M6&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid transition to M4. Allowed previous: M4-, M5, M6.</errorMessage>
</ValidationRule>