force-app/main/default/objects/Lead__c/validationRules/M4_TO.validationRule-meta.xml
<ValidationRule>
    <fullName>M4_TO</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;M4&quot;),
    NOT(ISPICKVAL(Stage__c, &quot;M4&quot;)),
    NOT(
        OR(
            ISPICKVAL(Stage__c,&quot;M5&quot;),
            ISPICKVAL(Stage__c,&quot;M6&quot;),
            ISPICKVAL(Stage__c,&quot;M7&quot;),
            ISPICKVAL(Stage__c,&quot;M4-&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid next stage from M4. Allowed: M5, M6, M7, M4-.</errorMessage>
</ValidationRule>