force-app/main/default/objects/Lead__c/validationRules/M6_FROM.validationRule-meta.xml
<ValidationRule>
    <fullName>M6_FROM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;M6&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Stage__c), &quot;M6&quot;)),
    NOT(
        OR(
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M1&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M2&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3+&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M3++&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M4-&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M4&quot;),
            ISPICKVAL(PRIORVALUE(Stage__c),&quot;M5&quot;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Invalid transition to M6. Allowed previous: M1, M2, M3, M3+, M3++, M4-, M4, M5.</errorMessage>
</ValidationRule>